hphp/hack/test/typecheck/case_type/multi_class_bad2.php.exp
File "multi_class_bad2.php", line 4, characters 11-20:
Invalid case type declaration. More than one variant of `MultiClass` could contain values with the same runtime tag (Typing[4475])
  File "multi_class_bad2.php", line 4, characters 24-24:
  This is the type `C`, which includes **instances of the class C**
  File "multi_class_bad2.php", line 4, characters 28-29:
  It may overlap with `I1`, which includes **instances of the interface I1**
  File "multi_class_bad2.php", line 4, characters 11-20:
  Because it is possible for values to be both **instances of the class C** and **instances of the interface I1**, `C` and `I1` cannot be in the same case type
File "multi_class_bad2.php", line 4, characters 11-20:
Invalid case type declaration. More than one variant of `MultiClass` could contain values with the same runtime tag (Typing[4475])
  File "multi_class_bad2.php", line 4, characters 24-24:
  This is the type `C`, which includes **instances of the class C**
  File "multi_class_bad2.php", line 4, characters 33-34:
  It may overlap with `I2`, which includes **instances of the interface I2**
  File "multi_class_bad2.php", line 4, characters 11-20:
  Because it is possible for values to be both **instances of the class C** and **instances of the interface I2**, `C` and `I2` cannot be in the same case type
File "multi_class_bad2.php", line 4, characters 11-20:
Invalid case type declaration. More than one variant of `MultiClass` could contain values with the same runtime tag (Typing[4475])
  File "multi_class_bad2.php", line 4, characters 28-29:
  This is the type `I1`, which includes **instances of the interface I1**
  File "multi_class_bad2.php", line 4, characters 33-34:
  It may overlap with `I2`, which includes **instances of the interface I2**
  File "multi_class_bad2.php", line 4, characters 11-20:
  Because it is possible for values to be both **instances of the interface I1** and **instances of the interface I2**, `I1` and `I2` cannot be in the same case type
