hphp/hack/test/typecheck/case_type/multi_class_bad2.php
<?hh
<<file:__EnableUnstableFeatures('case_types')>>

case type MultiClass = C | I1 | I2;

class C {
}

interface I1 {
}

interface I2 {
}
